--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -16,9 +16,9 @@ on:
         # Input has to be provided for the workflow to run
         required: true
   push:
-    branches: [ "staging_ik" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "staging_ik" ]        
+    branches: [ "master" ]        
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
