--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow that is manually triggered
 
-name: Manual workflow
+name: PortalRestAPIFunctionalTests
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
@@ -8,12 +8,10 @@ on:
   workflow_dispatch:
     # Inputs the workflow accepts.
     inputs:
-      name:
-        # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet'
-        # Default value if no value is explicitly provided
-        default: 'World'
-        # Input has to be provided for the workflow to run
+      branch:
+        type: String
+        description: Cognity Branch or revision or tag to run tests from
+        default: 'master'
         required: true
   push:
     branches: [ "master" ]
