--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -13,6 +13,22 @@ on:
         description: Cognity Branch or revision or tag to run tests from
         default: 'master'
         required: true
+      serverURL:
+        type: choice
+        description: AWS POSTGRE TESTS:http://api-testing.postgre-eu-central-1-stats-tests.analytics.rse.dev.eu-central-1.aws.fdscloud.io:8080/WebPortal/rest/
+        options: 
+        - http://api-testing.postgre-eu-central-1-stats-tests.analytics.rse.dev.eu-central-1.aws.fdscloud.io:8080/WebPortal/rest/
+        - http://api.ap-south-1-cognity-stats.analytics.rse.dev.ap-south-1.aws.fdscloud.io:8080/WebPortal/rest/
+        - http://api-testing.eu-central-1-cognity-stats-tests.analytics.rse.dev.eu-central-1.aws.fdscloud.io:8080/WebPortal/rest/
+        - https://hflp-cognity-api.hosting.factset.com/WebPortal/rest/
+        - https://hflu-cognity-api.hosting.factset.com/WebPortal/rest/
+        - https://dkbp-cognity-api.hosting.factset.com/WebPortal/rest/
+        - https://dkbu-cognity-api.hosting.factset.com/WebPortal/rest/
+        - https://dkbd-cognity-api.hosting.factset.com/WebPortal/rest/
+        - https://jdyp.hosting.factset.com/WebPortal/rest/
+        - https://hbwu-cognity-api.hosting.factset.com/WebPortal/rest/
+        required: true
+      user:  
   push:
     branches: [ "master" ]
   pull_request:
