--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -8,11 +8,6 @@ on:
   workflow_dispatch:
     # Inputs the workflow accepts.
     inputs:
-      branch:
-        type: String
-        description: Cognity Branch or revision or tag to run tests from
-        default: 'master'
-        required: true
       serverURL:
         type: choice
         description: AWS eh
@@ -35,6 +30,15 @@ on:
       password:
         type: String
         required: true
+      asOfDate:
+        type: choice
+        description: DEV:latestQuarterEnd CAPGROUP/HARTFORD/DEKA:2021-12-31
+        required: true
+        options:
+        - latestQuarterEnd
+        - latestMonthEnd
+        - "2021-12-31"
+        - "2019-09-30"  
   push:
     branches: [ "master" ]
   pull_request:
