--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,12 +1,8 @@
 # This is a basic workflow that is manually triggered
 
 name: PortalRestAPIFunctionalTests
-
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
 on:
   workflow_dispatch:
-    # Inputs the workflow accepts.
     inputs:
       serverURL:
         type: choice
@@ -49,13 +45,15 @@ on:
         type: String
         default: DEV
         required: true
-        description: For staging branch:DEV, DEKA, CAPGROUP, HARTFORD and valueCheck. For the other branches:generic,formatCheck,valueCheck,capgrooup. If you want to select more than one group, seperate them with comma.  
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]        
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+        description: For staging branch:DEV, DEKA, CAPGROUP, HARTFORD and valueCheck. For the other branches:generic,formatCheck,valueCheck,capgrooup. If you want to select more than one group, seperate them with comma.
+      folder:
+        type: choice
+        required: true
+        options:
+        - DEV
+        - DEKA
+        - HARTFORD
+        - CAPGROUP     
 jobs:
   build:
     runs-on: [ self-hosted, ubuntu-latest ]
