--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -54,6 +54,9 @@ on:
       fixedAsOfDate:
         type: choice
         required: true
+        options:
+        - "2021-12-31"
+        - "2018-09-30"
       verifyValues:  
         type: boolean
         required: true
