--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -69,7 +69,7 @@ on:
         default: true     
 jobs:
   build:
-    runs-on: [ self-hosted, ubuntu-latest ]
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
