--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -71,11 +71,8 @@ jobs:
       with:
         java-version: '17'
         distribution: 'corretto'
-    - name: Extract branch name
-      shell: bash
-      run: echo "::set-env name=BRANCH_NAME::$(echo ${GITHUB_REF#refs/heads/} | sed 's/\//_/g')"
-    - name: Test
-      run: echo "${BRANCH_NAME}"
+    - name: Prints the current branch name
+      run: echo "${GITHUB_BRANCH##*/}"
     - name: Build with Ant
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -88,7 +85,8 @@ jobs:
           folder: ${{ github.event.inputs.folder }}
           fixedAsOfDate: ${{ github.event.inputs.fixedAsOfDate }}
           verifyValues: ${{ github.event.inputs.verifyValues }}
-          Branch: ${BRANCH_NAME}
+          GITHUB_BRANCH: ${{ github.ref }}
+          Branch: $GITHUB_BRANCH  
       run: 
           echo $GITHUB_TOKEN
           echo $serverURL
