--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -83,7 +83,7 @@ jobs:
           folder: ${{ github.event.inputs.folder }}
           fixedAsOfDate: ${{ github.event.inputs.fixedAsOfDate }}
           verifyValues: ${{ github.event.inputs.verifyValues }}
-          Branch: ${{ github.ref }}
+          Branch: ${GITHUB_REF#refs/heads/} 
       run: 
           echo $GITHUB_TOKEN
           echo $serverURL
