--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -72,8 +72,7 @@ jobs:
         java-version: '17'
         distribution: 'corretto'
     - name: Get the current branch name
-      shell: bash
-      run: echo "::set-output name=Branch::${GITHUB_REF#refs/heads/}"
+      run: echo "Branch=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
       id: myref    
     - name: Build with Ant
       env:
@@ -87,7 +86,8 @@ jobs:
           folder: ${{ github.event.inputs.folder }}
           fixedAsOfDate: ${{ github.event.inputs.fixedAsOfDate }}
           verifyValues: ${{ github.event.inputs.verifyValues }}
-          Branch: ${{ steps.myref.outputs.branch }}
+#          Branch: ${{ steps.myref.outputs.branch }}
+          Branch: ${{ env.Branch }}
       run: 
           echo $GITHUB_TOKEN
           echo $serverURL
